--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>John Manouse</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="css/favicon.ico">
 </head>
 <body>
-    
+    <div>
+        <h1>I'm John</h1>
+        <p>A Coder Building Skills</p>
+    </div>  
 </body>
 </html>
