--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="icon" href="css/favicon.ico">
 </head>
 <body>
-    <div>
+    <div class="topDiv">
+        <img src="css/cloud.png" alt="cloud">       
         <h1>I'm John</h1>
         <p>A Coder Building Skills</p>
-    </div>  
+        <img src="css/cloud.png" alt="cloud">
+        <img src="css/mountain.png" alt="mountain">
+
+    </div>
+    
+    <div class="midDiv">
+
+    </div>
+
+    <div class="botDiv">
+
+    </div>
 </body>
 </html>
