--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="topDiv">
         <img src="css/cloud.png" alt="cloud">       
         <h1>I'm John</h1>
-        <p>A Coder Building Skills</p>
+        <p>A <span class="coder">Coder</span> Building Skills</p>
         <img src="css/cloud.png" alt="cloud">
         <img src="css/mountain.png" alt="mountain">
 
