--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>I'm John</h1>
         <p>A <span class="coder">Coder</span> Working on Building Skills</p>
         <img class="botCloud" src="css/cloud.png" alt="cloud">
-        <img src="css/mountain.png" alt="mountain">
+        <img class ="peak" src="css/mountain.png" alt="mountain">
 
     </div>
     
