--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="topDiv">
         <img class="topCloud"src="css/cloud.png" alt="cloud">       
         <h1>I'm John</h1>
-        <p>A <span class="coder">Coder</span> Working on Building Skills</p>
+        <p class="line2">A <span class="coder">Coder</span> Working on Building Skills</p>
         <img class="botCloud" src="css/cloud.png" alt="cloud">
         <img class ="peak" src="css/mountain.png" alt="mountain">
 
