--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img src ="css/jm-round.png" alt="profile picture">
           <h2>Hello.</h2>
-          <p>I am a recent Coding Bootcamp graduate working on honing my skills.</p>
+          <p>I am a recent Trilogy/UConn Coding Bootcamp graduate working on honing my skills.</p>
         </div>
         <hr>
         <div class="skills">
@@ -44,16 +44,17 @@
           <br>
           <h2 class="touch">Get In Touch</h2>
           <h3>Always looking for feedback & inquiries!</h3>
-          <p>I'm looking to start my new career! Any advice is welcome!</p>
+          <p>I'm looking to start my new career in programming! Any advice is welcome!</p>
           <a class="btn" href="mailto:jmanouse@mac.com">CONTACT ME</a>
         </div>
       </div>
       
       
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/john-manouse-81804619a">linkedin</a>
-        <a class="footer-link" href="https://github.com/">Github</a>
-        <a class="footer-link" href="https://mirageg4.github.io/mysite/">Website</a>
+        <a class="footer-link" href="https://mirageg4.github.io/mysite/" target="_blank">Website</a>
+        <a class="footer-link" href="https://github.com/" target="_blank">Github</a>
+        <a class="footer-link" href="https://mirageg4.github.io/Responsive-Portfolio/index.html" target="_blank">Portfolio</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/john-manouse-81804619a" target="_blank">Linkedin</a>
         <p>© 2020 John Manouse</p>
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
