--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div class="Div2">
         <div class="profile">
-          <img class="pro-img" src ="css/jamsm.jpg" alt="profile picture">
+          <img class="pro-img" src ="css/jamsm.png" alt="profile picture">
           <h2 class="touch">Hello.</h2>
           <p class="grey">I'm a recent Trilogy/UConn Coding Bootcamp graduate working on honing my skills.</p>         
         </div>
